[package]
name = "top_sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = [
    "sync",
    "rt",
    "io-std",
    "macros",
    "rt-multi-thread",
] }
clap = { version = "4.5.4", features = ["derive"] }
futures-util = "0.3.30"
tokio-tungstenite = { versoin = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
anyhow = "1.0.81"
